# breezr

./: README.md
breezr_core/: .gitignore  Cargo.toml
breezr_core/src/: bridge.rs  cleanup.rs  frb_generated.rs  lib.rs  models.rs  scan.rs
breezr_flutter/: README.md  analysis_options.yaml  pubspec.yaml
breezr_flutter/android/app/: build.gradle.kts
breezr_flutter/ios/Runner/: Info.plist
breezr_flutter/ios/Runner.xcodeproj/: project.pbxproj
breezr_flutter/lib/: app.dart  bootstrap.dart  bridge.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  injection.config.dart  injection.dart  lib.dart  main.dart  models.dart  providers.dart
breezr_flutter/lib/core/configs/: colors.dart  constants.dart  environment.dart
breezr_flutter/lib/core/services/: package.dart  scheduler.dart  secure_storage.dart  storage.dart
breezr_flutter/lib/core/utils/: extensions.dart  permissions.dart  services.dart  utils.dart
breezr_flutter/lib/l10n/arb/: app_en.arb
breezr_flutter/lib/routing/: route.dart  route_parser.dart  router_delegate.dart
breezr_flutter/linux/: CMakeLists.txt
breezr_flutter/linux/runner/: my_application.cc
breezr_flutter/macos/Runner/: DebugProfile.entitlements  MainFlutterWindow.swift  Release.entitlements
breezr_flutter/macos/Runner.xcodeproj/: project.pbxproj
breezr_flutter/macos/Runner/Configs/: AppInfo.xcconfig
breezr_flutter/test/: widget_test.dart
breezr_flutter/web/: index.html  manifest.json
breezr_flutter/windows/: CMakeLists.txt
breezr_flutter/windows/runner/: Runner.rc  main.cpp
scripts/: bindings.sh
(+6 files in other folders)
