[package]
name = "breezr_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
flutter_rust_bridge = "=2.9.0"
serde = { version = "1.0.219", features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dev-dependencies]
assert_matches = "1.5.0"
tempfile = "3.19.1"
